--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,7 +8,7 @@ body {
 
 body {
   background-color: #eeeeee;
-  background-image: url(./../../img/BackGr/BGfin.jpg);
+  background-image: url(./../../../public/img/BackGr/BGfin.jpg);
   background-position: center 0;
   background-repeat: no-repeat;
   background-size: auto 437vh;
