--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,6 @@
 @import "./blocks/category";
 @import "./blocks/skill";
 @import "./blocks/footer";
+@import "./blocks/head-progs";
+@import "./blocks/articles";
+@import "./blocks/about";
