--- a/src/sass/base/_vars.scss
+++ b/src/sass/base/_vars.scss
@@ -2,3 +2,5 @@ $accent-col: #d3c062;
 $accent-btn: #d3c062cc;
 $accent-btn-hover: rgba(184, 167, 81, 0.8);
 $menu-back: rgba(93, 100, 131, 0.85);
+$text-color-dark: #201e51;
+$prog-accent-col: #675000;
