--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,3 +1,8 @@
+.about {
+  margin-top: calc(40vh * 0.12674);
+  margin-bottom: calc(50vh * 0.12674);
+}
+
 .about__h1 {
   text-align: center;
   font-size: 22px;
