--- a/src/sass/blocks/_head-progs.scss
+++ b/src/sass/blocks/_head-progs.scss
@@ -67,35 +67,6 @@
   }
 }
 
-// .header__title {
-//   margin-top: calc(45vh * 0.12674);
-//   margin-bottom: calc(85vh * 0.12674);
-//   font-weight: 800;
-//   @include universal(44, 26, font-size);
-//   line-height: 1.46;
-//   white-space: nowrap;
-
-//   @media (max-width: 1025px) {
-//     white-space: normal;
-//   }
-
-//   @media (min-width: 1620px) {
-//     font-size: 46px;
-//   }
-// }
-
-// @media (max-width: 850px) {
-//   .header__text {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-
-//     .header__title {
-//       text-align: center;
-//     }
-//   }
-// }
-
 .select-input-row {
   display: flex;
   column-gap: calc(24vw * 0.0625);
@@ -117,34 +88,80 @@
 
 .cat-select,
 .search-input {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
   font-size: 16px;
+  font-weight: 500;
   font-family: inherit;
   color: $prog-accent-col;
-  border: 1px solid $prog-accent-col;
-  padding: calc(8vh * 0.12674) calc(20vw * 0.0625);
   background: transparent;
   outline: none;
 }
 
-.search-input {
-  width: 100%;
+.cat-select {
+  position: relative;
 }
 
-.cat-select::-ms-expand {
+.cat-select:focus .select__title {
+  border: 2px solid $prog-accent-col;
+}
+
+.select__title {
+  padding: 8px 20px;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid $prog-accent-col;
+  user-select: none;
+}
+
+.select__content {
+  position: absolute;
+  width: 100%;
+  background-color: #d9dbe7;
+  transition: all 0.3s ease-out;
+  opacity: 0;
+  box-shadow: 0 5px 15px 0 #737f97;
+}
+
+.select__content--active {
+  opacity: 1;
+
+  .select__label {
+    padding: 8px 20px;
+    border: 1px solid $prog-accent-col;
+    border-top: none;
+    max-height: 100%;
+  }
+}
+
+.select__input {
   display: none;
+
+  &:checked + label {
+    background-color: #d6d0a9;
+  }
+  &:hover + label {
+    background-color: #bec2e2;
+  }
+}
+
+.select__label {
+  display: block;
+  width: 100%;
+  max-height: 0;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.2s ease-out;
+}
+
+.search-input {
+  width: 100%;
+  border: 1px solid $prog-accent-col;
+  padding: 8px 20px;
 }
 
 .search-input::placeholder {
   color: $prog-accent-col;
 }
 
-.cat-select {
-  cursor: pointer;
-}
-.cat-select:focus,
 .search-input:focus {
   border: 2px solid $prog-accent-col;
 }
@@ -158,7 +175,7 @@
   margin-top: calc(12vh * 0.12674);
   font-size: 18px;
   font-weight: 700;
-  color: #247e12;
+  color: #cc5219;
 
   @media (max-width: 600px) {
     text-align: center;
