--- a/src/sass/blocks/_skill.scss
+++ b/src/sass/blocks/_skill.scss
@@ -114,14 +114,14 @@
 
 @media (max-width: 660px) {
   .skill__text-wrapper {
+    opacity: 0;
     height: 0;
-    transform: scale(100%, 0);
-    transition: transform 0.5s;
+    transition: all 0.3s ease-out;
   }
 
   .skill__text-wrapper--vis {
+    opacity: 1;
     height: 100%;
-    transform: scale(100%);
-    transition: transform 0.5s;
+    transition: all 0.3s ease-out;
   }
 }
