--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,5 @@
 @import "./blocks/articles";
 @import "./blocks/about";
 @import "./blocks/reg";
+@import "./blocks/registr";
+@import "./blocks/admin";
