--- a/src/sass/base/_vars.scss
+++ b/src/sass/base/_vars.scss
@@ -4,3 +4,4 @@ $accent-btn-hover: rgba(184, 167, 81, 0.8);
 $menu-back: rgba(93, 100, 131, 0.851);
 $text-color-dark: #201e51;
 $prog-accent-col: #675000;
+$red-accent-col: #cc5219;
