--- a/src/sass/blocks/_reg.scss
+++ b/src/sass/blocks/_reg.scss
@@ -6,15 +6,20 @@
 
 .reg__row {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
 .reg__img {
-  width: calc(300vw * 0.0625);
+  height: calc(250vh * 0.12674);
 
   img {
-    width: 100%;
+    height: 100%;
     opacity: 0.8;
+  }
+
+  @media (max-width: 900px) {
+    display: none;
   }
 }
 
@@ -49,6 +54,9 @@
 .reg__date {
   font-weight: 500;
   margin-bottom: calc(12vh * 0.12674);
-
   text-align: center;
+}
+
+.reg__date {
+  margin-bottom: calc(25vh * 0.12674);
 }
