--- a/src/sass/blocks/_skill.scss
+++ b/src/sass/blocks/_skill.scss
@@ -116,12 +116,40 @@
   .skill__text-wrapper {
     opacity: 0;
     height: 0;
+    overflow: hidden;
     transition: all 0.3s ease-out;
+
+    p {
+      margin-top: 0;
+      margin-bottom: 0;
+      height: 0;
+      transition: all 0.3s ease-out;
+    }
+
+    a {
+      height: 0;
+      padding: 0;
+      border: none;
+      transition: all 0.3s ease-out;
+    }
   }
 
   .skill__text-wrapper--vis {
     opacity: 1;
     height: 100%;
     transition: all 0.3s ease-out;
+
+    p {
+      margin-top: 25px;
+      margin-bottom: 25px;
+      height: 100%;
+    }
+
+    a {
+      height: 100%;
+      padding: 5px 15px;
+      border: 2px solid #c5b66b;
+      border-radius: 20px;
+    }
   }
 }
