--- a/src/sass/blocks/_articles.scss
+++ b/src/sass/blocks/_articles.scss
@@ -17,6 +17,7 @@
   @media (max-width: 600px) {
     flex-direction: column;
     align-items: center;
+    padding: calc(15vh * 0.12674) 16px;
   }
 }
 
@@ -38,6 +39,7 @@
   padding-right: calc(48vw * 0.0625);
 
   @media (max-width: 600px) {
+    width: 100%;
     padding-right: 0;
     margin-bottom: calc(12vh * 0.12674);
   }
