--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,17 +1,15 @@
 .header {
-  margin-top: calc(124vh * 0.12674);
-  margin-bottom: calc(275vh * 0.12674);
+  padding-top: calc(252vh * 0.12674);
+  padding-bottom: calc(275vh * 0.12674);
+  width: 100%;
+  height: 100vh;
 
   @media (max-width: 1025px) {
-    margin-top: calc(75vh * 0.12674);
+    padding-top: calc(233vh * 0.12674);
   }
   @media (max-width: 400px) {
-    margin-top: calc(44vh * 0.12674);
+    padding-top: calc(182vh * 0.12674);
   }
-}
-
-.header--margin {
-  margin-top: calc(204vh * 0.12674);
 }
 
 .header__row {
