--- a/src/sass/blocks/nav.scss
+++ b/src/sass/blocks/nav.scss
@@ -1,19 +1,20 @@
 .nav {
-  position: relative;
+  position: absolute;
+  width: 100%;
   padding-top: calc(54vh * 0.12674);
   padding-bottom: calc(47vh * 0.12674);
   @include adaptiv-font(16, 15);
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
+  @media (max-width: 1025px) {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
 
-    @media (max-width: 1025px) {
       // background-color: rgba(108, 111, 163, 0.7);
       z-index: 3;
     }
@@ -23,7 +24,7 @@
 .nav--fix {
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   padding-top: calc(25vh * 0.12674);
   padding-bottom: calc(25vh * 0.12674);
   background-color: $menu-back;
@@ -32,6 +33,10 @@
   @media (max-width: 1025px) {
     padding-top: calc(15vh * 0.12674);
     padding-bottom: calc(15vh * 0.12674);
+  }
+
+  @media (max-width: 660px) {
+    position: absolute;
   }
 }
 
